--- a/client/src/assets/css/Profile-with-data-and-skills.css
+++ b/client/src/assets/css/Profile-with-data-and-skills.css
@@ -9,9 +9,9 @@
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
 }
 
-.bg-primary {
+/* .bg-primary {
   background-color: #008cff!important;
-}
+} */
 
 .card {
   position: relative;
