提交need时数据库创建collection只有posts,去掉offerhelp的判断;needs广场只出现非approved帖子,以列表形式展示,details按钮样式和主题统一

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -152,7 +152,8 @@ nav {
 }
 
 .moredetailbutton {
-  background-color: #3c7191;
+  background-color: #18bc9c;
+  border-color: #18bc9c;
   font-size: 15px;
   color: #f5efe8;
   border-radius: 12px;
