Add note in the message to tell users how to start real-time chat; Improve logic preventing users to start chat with themselves

--- a/client/src/Components/chat.css
+++ b/client/src/Components/chat.css
@@ -137,3 +137,9 @@
   flex-grow: 1;
   overflow-y: auto;
 }
+
+.hoverable-cell:hover {
+  background-color: #e8e8e8;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
